<resources>
    <string name="app_name">CTF</string>

    <!-- Strings for page titles -->
    <string name="dashboard">Dashboard</string>
    <string name="roominfo">Room Info</string>
    <string name="userinfo">My Account</string>
    <string name="settings">Settings</string>
    <string name="reportproblem">Report a problem</string>
    <string name="loading">Loading</string>

    <!-- Strings for blind people? -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="printer_error">Printing Unavailable</string>
    <string name="printer_working">Printing Available</string>
    <string name="computers_available">Computers Available</string>
    <string name="computers_unavailable">No Computers Available</string>
    <string name="map_button">View Room Map</string>

    <string name="action_changelog">Changelog</string>
    <string name="action_settings">Settings</string>

    <!-- Srings related to settings -->
    <string name="pref_push_title">Push notifications</string>
    <string name="pref_pushprinterdownup">Printer goes down/comes back up</string>
    <string name="pref_roomnotfull">A previously full room frees up</string>
    <string name="pref_jobenters">A job of yours enters the print queue</string>
    <string name="pref_remainquota">Quota is equal or less than:</string>
    <string name="pref_other_title">Other</string>
    <string name="pref_language">Language</string>
    <string name="pref_about">About</string>
    <string name="pref_logout">Logout</string>

    <!-- Strings related to problem report page -->
    <string name="error_inst">Pick which room is causing you grievances, select the error, and press send to relay onto us your grievances.</string>
    <string name="error_report_title">Error Report</string>
    <string-array name="problem_spinner">
        <item>Printer Down</item>
        <item>Computer Down</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">McGill Email / Short User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This is not a valid McGill email address</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_user">User</string>
    <string name="authenticator_account_type">com.example.ctfdemo.StudentAccount</string>
    <string name="authenticator_token_type">com.example.ctfdemo.TepidToken</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings displayed on the dashboard -->
    <string name="dashboard_username_text">User: %s</string>
    <string name="dashboard_quota_text">Quota: %s</string>
    <string name="dashboard_last_job_text">Last job: %s</string>
    <string name="string_1b16">1B16</string>
    <string name="string_1b17">1B17</string>
    <string name="string_1b18">1B18</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="table_header_print_history">Print History</string>

    <string name="send_error">Send Error</string>
    <string name="ctf_long_name">McGill Science Computer Taskforce</string>

</resources>


