<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:key="pref_push_key"
        android:title="@string/pref_push_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_pushprinterdownup"
            android:title="@string/pref_pushprinterdownup" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_roomnotfull"
            android:title="@string/pref_roomnotfull" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_jobenters"
            android:title="@string/pref_jobenters" />
        <EditTextPreference
            android:defaultValue="0"
            android:key="pref_remainquota"
            android:numeric="integer"
            android:title="@string/pref_remainquota" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_other_key"
        android:title="@string/pref_other_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_theme"
            android:title="Dark Mode" />
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/language"
            android:entryValues="@array/language_alias"
            android:key="pref_language"
            android:title="@string/pref_language" />
        <Preference
            android:key="pref_about"
            android:title="@string/pref_about" />
        <Preference
            android:key="pref_logout"
            android:title="@string/pref_logout" />
    </PreferenceCategory>

</PreferenceScreen>