<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ctfdemo.RoomInfoTabs$PlaceholderFragment"
    android:background="@color/windowBackground">
    <LinearLayout
        android:id="@+id/status_icons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/computer_icon"
            android:contentDescription="@string/computers_available"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/computers_available_true"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/printer_working"
            android:contentDescription="@string/printer_working"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_printer_alert"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/status_strings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_icons"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/computer_text"
            android:text="@string/computers_available"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/printer_text"
            android:text="@string/printer_error"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/map_button"
        android:text="@string/map_button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@+id/status_strings"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recent_jobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map_button"></android.support.v7.widget.RecyclerView>
</RelativeLayout>
