<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292a3d">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- row for 1b16 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="12dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_1B16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:height="90dp"
                android:gravity="fill_horizontal|center_vertical|center_horizontal"
                android:text="@string/string_1b16"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textIsSelectable="false"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/vacancies_1B16"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight=".25"
                android:contentDescription="@string/computers_available"
                android:src="@drawable/computers_available_true" />

            <ImageView
                android:id="@+id/printer_1B16_south"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight=".25"
                android:contentDescription="@string/printer_working"
                android:src="@drawable/printer_up" />

            <ImageView
                android:id="@+id/printer_1B16_north"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight=".25"
                android:contentDescription="@string/printer_working"
                android:src="@drawable/printer_up" />
        </LinearLayout>

        <!-- row for 1b17 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="12dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_1B17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:height="90dp"
                android:gravity="fill_horizontal|center_vertical|center_horizontal"
                android:text="@string/string_1b17"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/vacancies_1B17"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight=".25"
                android:contentDescription="@string/computers_available"
                android:src="@drawable/computers_available_true" />

            <ImageView
                android:id="@+id/printer_1B17_south"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight=".25"
                android:contentDescription="@string/printer_working"
                android:src="@drawable/printer_up" />

            <ImageView
                android:id="@+id/printer_1B17_north"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight=".25"
                android:contentDescription="@string/printer_working"
                android:src="@drawable/printer_up" />
        </LinearLayout>

        <!-- row for 1b18 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="12dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_1B18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".25"
                android:height="90dp"
                android:gravity="fill_horizontal|center_vertical|center_horizontal"
                android:text="@string/string_1b18"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/vacancies_1B18"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight=".25"
                android:contentDescription="@string/computers_available"
                android:src="@drawable/computers_available_true" />

            <ImageView
                android:id="@+id/printer_1B18"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight=".25"
                android:contentDescription="@string/printer_working"
                android:src="@drawable/printer_up" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight=".25"
                android:contentDescription="filler" />
        </LinearLayout>

        <TextView
            android:id="@+id/dashboard_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/dashboard_quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/dashboard_last_print_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

    </LinearLayout>

</ScrollView>